2008-12-03  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/: Document various issues w/ comments.

	* common/src/configtool/: Support CONFIG_USERNAME_NOT_SET_YET
	config flag.

	* bmc-config/src/: Support CONFIG_USERNAME_NOT_SET_YET in various
	fields due to checkout issues with Sun X4140.
	
2008-12-01  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/ipmi_monitoring_sensors.conf.5.pre.in: Fix typos.

2008-12-01  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_7_3.	

2008-11-27  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/src/ipmi-sel-entry.c (ipmi_sel_get_entry): Fix output
	corner case.

	* ipmimonitoring/: Add system ACPI power state and button switch
	interpretations.  Add forgotten bitmasks.  Fix config file option
	names.
	
	* ipmimonitoring/: Add new interpretations, button switch state,
	entity presence device install, processor state.

	* libfreeipmi/src/util/ipmi-sensor-and-event-code-tables-util.c/:
	Fix event message data2 output corner cases.

2008-11-26  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/: Additional documentation updates.

	* ipmi-sensors/src/ipmi-sensors-reading.c (sensor_reading): Output
	'NA' is sensor scanning is disabled.

	*
	ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_get_sensor_reading): Return 'unreadable sensor' for sensors
	where sensor scanning is disabled.

	* ipmimonitoring/: Add new interpretations, power supply state,
	drive slot state, drive slot predictive failure.

	* ipmiconsole/src/ipmiconsole.c (main): Fix workaround bug.

	* common/src/toolcommon/tool-cmdline-common.h,
	common/src/toolcommon/tool-cmdline-common.c
	(parse_workaround_flags), common/src/toolcommon/tool-common.c
	(ipmi_open), ipmiconsole/src/ipmiconsole/ipmiconsole.c (main),
	ipmipower/src/, libfreeipmi/include/freeipmi/api/ipmi-api.h,
	libfreeipmi/src/api/ipmi-api.c (ipmi_ctx_open_outofband_2_0),
	ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c