@@ -2,6 +2,7 @@
 ----------------
 o Support output of "<username-not-set-yet>" in bmc-config for fields
 that require a username to be configured before data may be retrieved.
+o Fix Suse build issue in spec file.
 o Fix minor documentation typos.
 
 0.7.3 - 12/01/08
